# Hartree-Fock-and-CCSD

./: ArrayDequeTest.java  CMakeLists.txt  CoupledCluster.cpp  CoupledCluster.hpp  HF  HartreeFock.cpp  HartreeFock.hpp  MP2.cpp  Makefile  Other.cpp  QuantumUtils.cpp  QuantumUtils.hpp  README.md  Read.cpp  Read.hpp  Utils.cpp  Utils.hpp  main.cpp  testout.txt
Data/STO3G_Water/: output.txt
data/STO3G_Methane/: #15.891123645988891#
old/: molecule.cpp  molecule.h
tests/: MP2.hpp  Makefile  proj3.cpp  proj3.hpp  sto_3g_methane.cpp  sto_3g_water.cpp  test1
